Kubernetes/Task_08/deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
          - name: index-html-configmap
            mountPath: /usr/share/nginx/html
        ports:
        - containerPort: 80
      volumes:
      - name: index-html-configmap 
        configMap:
          name: index-html-configmap
