Kubernetes/Task_08/myservice-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice-nginx
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
    - name: web
      port: 80
      nodePort: 32000
      targetPort: 80
