Kubernetes/Task_08/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: my-app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myservice-nginx
            port:
              number: 80
  tls:
    - hosts:
      - my-app.com
      secretName: my-app-secret-tls
